PR/53837: Michael Scholz: src/bin/csh/func.c from current has a superfluous fprintf