bin/csh/func.c
@@ -1,4 +1,4 @@
-/* $NetBSD: func.c,v 1.42 2019/01/05 16:54:00 christos Exp $ */
+/* $NetBSD: func.c,v 1.43 2019/01/06 01:22:50 christos Exp $ */
 
 /*-
  * Copyright (c) 1980, 1991, 1993
@@ -34,7 +34,7 @@
 #if 0
 static char sccsid[] = "@(#)func.c	8.1 (Berkeley) 5/31/93";
 #else
-__RCSID("$NetBSD: func.c,v 1.42 2019/01/05 16:54:00 christos Exp $");
+__RCSID("$NetBSD: func.c,v 1.43 2019/01/06 01:22:50 christos Exp $");
 #endif
 #endif /* not lint */
 
@@ -619,7 +619,6 @@ search(int type, int level, Char *goal)
 	    if (lastchr(aword) == ':')
 		aword[Strlen(aword) - 1] = 0;
 	    cp = strip(Dfix1(aword));
-	    fprintf(cshout, "%s\n", short2str(cp));
 	    if (Gmatch(goal, cp))
 		level = -1;
 	    free(cp);
